--- a/store-styles.css
+++ b/store-styles.css
@@ -46,7 +46,7 @@ ul {
 
 .logo a {
     position: absolute;
-    font-family: MoonTime-Regular;
+    font-family: myriad pro;
     font-weight: 700;
     color: var(--logo);
     font-size: 2rem;
@@ -56,6 +56,7 @@ ul {
 }
 
 .logo font {
+    font-family: MoonTime-Regular;
     color: #287dfc;
 }
 
