--- a/store-styles.css
+++ b/store-styles.css
@@ -52,6 +52,16 @@ ul {
 
 .logo a {
     position: absolute;
+    font-family: BukhariScript-Regular;
+    font-weight: 800;
+    color: var(--logo);
+    font-size: 3rem;
+    text-shadow: 2px 2px 30px rgba(0, 0, 0, 0.2);
+    letter-spacing: 1px;
+    font-style: italic;
+}
+.logo a h1 {
+    position: absolute;
     font-family: MoonTime-Regular;
     font-weight: 800;
     color: var(--logo);
@@ -62,7 +72,6 @@ ul {
 }
 
 .logo font {
-  font-family: BukhariScript-Regular;
     color: #287dfc;
 }
 
