--- a/store-styles.css
+++ b/store-styles.css
@@ -890,6 +890,12 @@ footer font {
         font-size: 1.3rem;
         top: 30px;
     }
+  
+  
+  .logo h1 {
+    margin-top: -39px;
+    margin-left: 25px;
+}
     .nav-list {
         margin-right: 25%;
         margin-top: 5%;
