--- a/store-styles.css
+++ b/store-styles.css
@@ -187,122 +187,6 @@ ul {
 }
 
 
-/*
-.search {
-    position: fixed;
-    right: 90px;
-    top: 50px;
-    width: 60px;
-    height: 60px;
-    background-color: var(--write);
-    border-radius: 60px;
-    transition: 0.5s;
-    box-shadow: 0 0 5px rgba(167, 158, 245, 0.2);
-    z-index: 3;
-    cursor: pointer;
-    overflow: hidden;
-}
-
-.search.active {
-    width: 360px;
-}
-
-.search .icone {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 60px;
-    height: 60px;
-    background: var(--fff);
-    border-radius: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    cursor: pointer;
-}
-
-.search .icone:hover {
-    background-color: var(--search-icone);
-    transition: all ease 0.5s;
-}
-
-.search .icone::before {
-    content: '';
-    position: absolute;
-    height: 15px;
-    width: 15px;
-    border: 3px solid var(--search);
-    border-radius: 50%;
-    transform: translate(-4px, -4px);
-}
-
-.search .icone::after {
-    content: '';
-    position: absolute;
-    height: 12px;
-    width: 3px;
-    background: var(--search);
-    transform: translate(6px, 6px) rotate(315deg);
-}
-
-.search .input {
-    position: relative;
-    width: 300px;
-    height: 60px;
-    left: 60px;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-}
-
-.search .input input {
-    top: 0;
-    margin-right: 68%;
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    color: var(--text-search);
-    font-size: 1rem;
-    padding: 10px 0;
-    background: transparent;
-}
-
-.clear {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px;
-    height: 15px;
-    right: 15px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.clear::before {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 15px;
-    background: var(--search);
-    transform: rotate(315deg);
-}
-
-.clear::after {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 15px;
-    background: var(--search);
-    transform: rotate(-315deg);
-}
-
-*/
-
-
 /* Search */
 
 ::selection {
@@ -1046,6 +930,14 @@ footer font {
         width: 35px;
         font-size: 12px;
     }
+    
+    
+    
+    .search-box .cancel-icon {
+    font-size: 18px;
+    color: #fff;
+}
+    
     .search-box.active {
         width: 190px;
     }
