--- a/store-styles.css
+++ b/store-styles.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
+
 @font-face {
     font-family: MoonTime-Regular;
     src: url('fonts/moontime/MoonTime-Regular.ttf');
@@ -737,6 +740,10 @@ footer font {
     justify-content: center;
     align-items: center;
     padding: 15px;
+}
+
+.copyright a{
+    font-size: Audiowide;
 }
 
 .top {
