--- a/store-styles.css
+++ b/store-styles.css
@@ -741,6 +741,7 @@ footer font {
     align-items: center;
     padding: 15px;
     font-family: 'Audiowide', cursive;
+    font-size: 12px;
 }
 
 .top {
