--- a/store-styles.css
+++ b/store-styles.css
@@ -1061,6 +1061,10 @@ footer font {
     .brand-text h3 {
     font-size: 1rem;
 }
+    
+    .p-heading h3 {
+    font-size: 1.5rem;
+}
 }
 
 @media(max-width:320px) {
