--- a/store-styles.css
+++ b/store-styles.css
@@ -252,8 +252,9 @@ ul {
     transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.search-box .search-icon:hover{
-    color: #000;   
+.search-icon:hover{
+    color: #000; 
+    transition: 1s;
 }
 
 .search-box .search-icon.active {
