--- a/store-styles.css
+++ b/store-styles.css
@@ -745,7 +745,7 @@ footer font {
 }
 
 .footer-menu .bg:hover {
-    background-color: #6b60ec;
+    background-color: #008080;
     transition: all ease 0.5s;
 }
 
