--- a/details_modelo1/details.css
+++ b/details_modelo1/details.css
@@ -68,13 +68,6 @@ body {
     background-position: center;
 }
 
-h1,
-h2,
-h3,
-p {
-    margin: 0;
-}
-
 ul {
     margin: 0;
     padding: 0;
@@ -110,6 +103,379 @@ a {
 .preci__button:hover {
     color: var(--write-color);
     background: var(--black-color);
+}
+
+.modal {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0.25s ease-in-out, opacity 0.25s ease-in-out, transform 0.25s ease-in-out;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 16px 24px;
+    width: 50rem;
+    height: 35rem;
+    border-radius: 0.5rem;
+}
+
+.checkout {
+    background-color: #dddfe6;
+    border-radius: 20px;
+    height: 470px;
+    -webkit-box-shadow: 0 30px 48px rgba(37, 44, 65, 0.32);
+    -moz-box-shadow: 0 30px 48px rgba(37, 44, 65, 0.32);
+    box-shadow: 0 30px 48px rgba(37, 44, 65, 0.32);
+}
+
+.order {
+    width: 300px;
+    height: 470px;
+    border-radius: 20px;
+    padding: 0 20px;
+    float: left;
+    background-color: #f4f5f9;
+    z-index: 1;
+    -webkit-box-shadow: 0 15px 24px rgb(37 44 65 / 16%);
+    -moz-box-shadow: 0 15px 24px rgba(37, 44, 65, 0.16);
+    box-shadow: 0 15px 24px rgb(37 44 65 / 16%);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    line-height: 1.4;
+}
+
+h1 {
+    font-size: 42px;
+    color: #6d819c;
+    text-align: left;
+}
+
+h2 {
+    font-size: 28px;
+    letter-spacing: -2px;
+    color: #6d819c;
+    text-align: center;
+    line-height: 2.8;
+}
+
+h3 {
+    font-size: 16px;
+    color: #636363;
+    letter-spacing: 1px;
+    text-align: left;
+}
+
+h4 {
+    font-size: 16px;
+    color: #7495aa;
+    letter-spacing: 1px;
+    text-align: left;
+    line-height: 2;
+}
+
+h5 {
+    font-size: 11px;
+    font-weight: 700;
+    color: #c9d6de;
+    letter-spacing: 1px;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+h5>span {
+    margin-left: 87px;
+}
+
+h5.total {
+    margin-top: 20px;
+}
+
+h6 {
+    font-family: 'PT Mono';
+    font-size: 18px;
+    font-weight: 400;
+    color: #f4f5f9;
+    letter-spacing: 0px;
+    text-align: left;
+    text-transform: uppercase;
+    line-height: 1.8;
+}
+
+h6>span {
+    margin-left: 64px;
+}
+
+ul.order-list {
+    width: 100%;
+    height: 225px;
+    list-style: none;
+    overflow-y: scroll;
+    padding-right: 12px;
+}
+
+ul.order-list li {
+    height: 70px;
+    margin-left: 5px;
+    overflow: hidden;
+    border-bottom: 1px solid #e9ebf2;
+}
+
+ul.order-list li>img {
+    width: 60px;
+    height: 60px;
+    float: left;
+}
+
+ul.order-list li>h4 {
+    margin-top: 16px;
+    line-height: 1;
+    letter-spacing: 1px;
+    text-align: right;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+ul.order-list li>h5 {
+    margin-top: 0px;
+    text-align: right;
+    display: none;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+ul.order-list li:hover>h5 {
+    margin-top: 5px;
+    display: block;
+}
+
+.payment {
+    z-index: 0;
+    width: 445px;
+    position: relative;
+    float: right;
+}
+
+.card {
+    width: 300px;
+    height: 178px;
+    position: relative;
+    margin: 0 auto;
+    background-color: #f1404b;
+    overflow: hidden;
+    z-index: 1;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 20px;
+    -webkit-box-shadow: 0 15px 24px rgb(37 44 65 / 32%);
+    -moz-box-shadow: 0 15px 24px rgba(37, 44, 65, 0.32);
+    box-shadow: 0 15px 24px rgb(37 44 65 / 32%);
+}
+
+.card-content {
+    width: 100%;
+    padding: 20px;
+    position: relative;
+    float: left;
+    z-index: 1;
+}
+
+#logo-allskiin {
+    position: relative;
+    margin-top: -20px;
+    left: 190px;
+}
+
+
+/*--------------------
+Credit Card Background
+---------------------*/
+
+.wave {
+    height: 300px;
+    width: 300px;
+    position: relative;
+    background: #780910;
+    z-index: -1;
+}
+
+.wave:before,
+.wave:after {
+    content: "";
+    display: block;
+    position: absolute;
+    background: rgba(193, 14, 26, 1);
+    background: -moz-linear-gradient(top, rgba(193, 14, 26, 1) 0%, rgba(241, 64, 76, 0.3) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(193, 14, 26, 1)), color-stop(100%, rgba(241, 64, 76, 0.3)));
+    background: -webkit-linear-gradient(top, rgba(193, 14, 26, 1) 0%, rgba(241, 64, 76, 0.3) 100%);
+    background: -o-linear-gradient(top, rgba(193, 14, 26, 1) 0%, rgba(241, 64, 76, 0.3) 100%);
+    background: -ms-linear-gradient(top, rgba(193, 14, 26, 1) 0%, rgba(241, 64, 76, 0.3) 100%);
+    background: linear-gradient(to bottom, rgba(193, 14, 26, 1) 0%, rgba(241, 64, 76, 0.3) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#c10e1a', endColorstr='#f1404c', GradientType=0);
+    -webkit-border-radius: 50% 50%;
+    -moz-border-radius: 50% 50%;
+    border-radius: 50% 50%;
+}
+
+.wave:after {
+    height: 300px;
+    width: 300px;
+    left: 30%;
+    top: 20%;
+    opacity: 0.8;
+}
+
+.wave:before {
+    height: 360px;
+    width: 360px;
+    left: -5%;
+    top: -70%;
+}
+
+.card-form {
+    width: 100%;
+    position: relative;
+    float: right;
+    padding: 3px 90px;
+}
+
+.card-form>p.field {
+    height: 44px;
+    padding: 2px 10px;
+    margin-bottom: 2px;
+    background-color: #f4f5f9;
+    border: 1px solid #d2d4de;
+    display: inline-block;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 100px;
+}
+
+#cardnumber {
+    width: 244px;
+}
+
+.button-cta {
+    width: 90%;
+    height: 65px;
+    position: absolute;
+    float: right;
+    right: 0px;
+    bottom: -130px;
+    padding: 10px 20px;
+    background-color: #f1404b;
+    border: 1px solid #f1404b;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700;
+    margin-right: 22px;
+    border-radius: 20px;
+    font-size: 24px;
+    color: #f4f5f9;
+    z-index: -1;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.button-cta span {
+    display: inline-block;
+    position: relative;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.button-cta span:after {
+    content: '→';
+    color: #f4f5f9;
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -40px;
+}
+
+.button-cta:hover span {
+    padding-right: 45px;
+}
+
+.button-cta:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+input[type=text] {
+    height: 44px;
+    position: relative;
+    padding: 0px 10px 0px 6px;
+    background-color: transparent;
+    border: none;
+    color: #000;
+    font-family: 'PT Mono';
+    font-size: 18px;
+    font-weight: 400;
+    z-index: 0;
+}
+
+.close-button {
+    float: right;
+    width: 24px;
+    line-height: 24px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 20px;
+    background-color: lightgray;
+}
+
+.close-button:hover {
+    background-color: darkgray;
+}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+}
+
+.dados {
+    width: 50px;
+    height: 50px;
+}
+
+.dados p {
+    font-size: 16px;
+    color: #636363;
+    letter-spacing: 1px;
+    text-align: left;
+    margin-left: 105px;
+    line-height: 1;
 }
 
 @media screen and (max-width: 968px) {
@@ -305,6 +671,7 @@ a {
     padding: 1.25rem 3.125rem;
     border-radius: 1.5rem;
     transition: .5s;
+    border: none;
 }
 
 .preci__value {
@@ -337,7 +704,7 @@ a {
     --write: #111111;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
     .preci__button {
         padding: 1.25rem 1.125rem;
     }
@@ -346,6 +713,38 @@ a {
         top: -8%;
         left: 4%;
         right: 0;
+    }
+    .order {
+        width: 270px;
+        height: 320px;
+    }
+    .modal-content {
+        width: 19rem;
+        margin-top: 50px;
+        padding: 20px 17px;
+    }
+    ul.order-list {
+        height: 90px;
+    }
+    h1 {
+        font-size: 30px;
+    }
+    .card {
+        opacity: 0;
+        margin: -135px auto;
+    }
+    .button-cta {
+        width: 244px;
+        height: 45px;
+        bottom: -105px;
+        margin-right: 15px;
+        font-size: 20px;
+    }
+    .dados p {
+        opacity: 0;
+    }
+    .checkout {
+        height: 490px;
     }
 }
 
