fundo da pesquisa do 1º modelo allskiin

--- a/details_modelo1/details.css
+++ b/details_modelo1/details.css
@@ -63,7 +63,8 @@ $font-bold: 700;
 body {
     margin: 3rem 0 0 0;
     font-family: var(--body-font);
-    background-image: var(--fundo);
+    /* background-image: var(--fundo); */
+    background: beige;
     background-size: 400px;
     background-position: center;
 }
