--- a/details_modelo1/details.css
+++ b/details_modelo1/details.css
@@ -781,7 +781,7 @@ input[type=text] {
     }
     .sneaker__colors {
         right: initial;
-        bottom: 0;
+        bottom: 100px;
     }
     .sneaker__colors span {
         display: inline-block;
