--- a/store-styles.css
+++ b/store-styles.css
@@ -222,6 +222,7 @@ ul {
     height: 100%;
     border: none;
     border-radius: 50px;
+    color: var(--input);
     background: var(--search);
     outline: none;
     padding: 0 60px 0 20px;
@@ -814,6 +815,7 @@ footer font {
     --search-icon-active: #fff; 
     --search-icon-active-icon: #000; 
     --rgba: 0 0 0;
+    --input: #fff;
 }
 
 .dark-theme {
@@ -842,6 +844,7 @@ footer font {
     --search-icon-active: #000; 
     --search-icon-active-icon: #fff; 
     --rgba: 255 255 255;
+    --input: #000;
 }
 
 .mode {
